--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "config": "^3.3.3",
     "node-binance-api": "^0.12.5",
+    "node-bitstamp": "^3.0.0",
     "twitter-api-client": "^1.2.4"
   },
   "devDependencies": {},
