--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "config": "^3.3.3",
     "node-binance-api": "^0.12.5",
     "node-bitstamp": "^3.0.0",
+    "node-schedule": "^2.0.0",
+    "promise-mysql": "^5.0.3",
+    "telegraf": "^4.3.0",
     "twitter-api-client": "^1.2.4"
   },
   "devDependencies": {},
